Modification des classes row

--- a/application/layouts/index.phtml
+++ b/application/layouts/index.phtml
@@ -9,7 +9,7 @@
         <?php echo $this->render("includes/nav-main.phtml"); ?>
 
         <div class='container-fluid' >
-            <div class='row-fluid page-header' style="margin-top: 55px">
+            <div class='row page-header' style="margin-top: 55px">
                 <div class='span12'>
                     <h2 style="margin: 4px 0">
                       <?php echo $this->avatar(Zend_Auth::getInstance()->getIdentity()['ID_UTILISATEUR'], 'medium', array('style' => "float: left; width: 50px; border: 1px solid #dfdfdf; border-radius: 50%; margin-right: 15px; margin-top: 14px;")) ?>
@@ -26,7 +26,7 @@
                 </div>
             </div>
 
-             <div class='row-fluid'>
+             <div class='row'>
                 <div class='span12'>
                     <?php echo $this->render("includes/notifications.phtml"); ?>
                     <?php echo $this->layout()->content; ?>
