--- a/application/layouts/menu_admin.phtml
+++ b/application/layouts/menu_admin.phtml
@@ -68,7 +68,7 @@
 
 <h2 class='page-header'>Administration</h2>
 
-<div class='row-fluid'>
+<div class='row'>
    <div class='span12' >
         <?php $this->placeholder('before_content')->captureEnd() ?>
         <?php $this->placeholder('after_content')->captureStart() // Capture du 'after_content' ?>
