--- a/application/views/scripts/calendrier-des-commissions/gestionodj.phtml
+++ b/application/views/scripts/calendrier-des-commissions/gestionodj.phtml
@@ -446,7 +446,7 @@ $(document).ready(function() {
 		//dans le cas ou on prend en compte les heures (cas par défaut)
 		echo "
 			<div class='container-fluid'>
-			<div class='row-fluid'>
+			<div class='row'>
 				<div id='calendar' name='calendar' class='span9'>
 				</div>
 		";
