--- a/application/views/scripts/dossier/liees.phtml
+++ b/application/views/scripts/dossier/liees.phtml
@@ -339,7 +339,7 @@ echo "
 
 		foreach($this->listeDossierLies as $ref => $dossier){
 			echo "
-				<div class='row-fluid' style='margin-bottom:10px;'>
+				<div class='row' style='margin-bottom:10px;'>
                     <div class='span10'>
                     	<a href='/dossier/index/id/".$dossier['dossierInfo'][0]['ID_DOSSIER']."'>
 			";
