--- a/application/views/scripts/dossier/results/avis-et-derogations.phtml
+++ b/application/views/scripts/dossier/results/avis-et-derogations.phtml
@@ -3,7 +3,7 @@
 
     <h1 class='text-center'><?= $this->TITRE ?></h1>
 
-    <div class="row-fluid">
+    <div class="row">
         <div class="span6">
             <p>Type : <?= $this->TYPE ?></p>
             <p>Objet : <?= $this->OBJET ?>
