--- a/application/views/scripts/etablissement/descriptif/descriptif-original.phtml
+++ b/application/views/scripts/etablissement/descriptif/descriptif-original.phtml
@@ -22,7 +22,7 @@
 <?php endif ?>
 
 <h4 class='h4_subtitle'>Descriptif technique</h4>
-<div class='row-fluid'>
+<div class='row'>
 	<?php
 		$i = 0;
 	    foreach($this->champs_descriptif_technique as $title => $champ_destech) {
@@ -53,7 +53,7 @@
 	        $i++;
 
             if($i == 3) {
-            	echo "</div> <div class='row-fluid' >";
+            	echo "</div> <div class='row' >";
             	$i = 0;
             }
 	    }
