--- a/application/views/scripts/etablissement/edit.phtml
+++ b/application/views/scripts/etablissement/edit.phtml
@@ -16,7 +16,7 @@
     <h3>Modification de l'établissement</h3>
     <?php endif ?>
 
-    <div class='row-fluid'>
+    <div class='row'>
 
         <!-- Informations générales de l'établissement -->
         <div class='span6'>
