--- a/application/views/scripts/etablissement/index.phtml
+++ b/application/views/scripts/etablissement/index.phtml
@@ -5,7 +5,7 @@
 
     <h3>Fiche d'informations générales</h3>
 
-    <div class='row-fluid'>
+    <div class='row'>
         <!-- Informations générales de l'établissement -->
         <div class='span6'>
             <!-- Classement de l'établissement -->
