--- a/application/views/scripts/etablissement/textes-applicables.phtml
+++ b/application/views/scripts/etablissement/textes-applicables.phtml
@@ -13,7 +13,7 @@
 
 <?php else : ?>
 
-<div class='row-fluid'>
+<div class='row'>
     <?php foreach($this->textes_applicables_de_etablissement as $titre => $textes_applicables) : ?>
         <h4><?php echo $titre ?></h4>
         <ul class='list-unstyled'>
