--- a/application/views/scripts/formulaire/edit-rubrique.phtml
+++ b/application/views/scripts/formulaire/edit-rubrique.phtml
@@ -3,7 +3,7 @@
     Retourner sur la liste des formulaires
 </a>
 
-<div class="row-fluid">
+<div class="row">
     <h3>Informations sur la rubrique</h3>
     <div class="span4 infos-rubrique">
         <!-- TODO: Utiliser le formulaire de Zend -->
@@ -40,7 +40,7 @@
     'count' => count($this->champs),
 ]); ?>
 
-<div id="edit-rubrique" class="row-fluid">
+<div id="edit-rubrique" class="row">
     <div class="span4 infos-champ">
         <form enctype="application/x-www-form-urlencoded" method="post" class="form-inline" action>
             <div>
@@ -52,10 +52,10 @@
 
             <div id="div-list-value">
                 <h5>Définition des valeurs de la liste</h5>
-                <div class="row-fluid">
+                <div class="row">
                     <a href='#' id='add-list-value'>Ajouter une valeur</a>
                 </div>
-                <div class="row-fluid">
+                <div class="row">
                     <div id="list-value" class="span10"></div>
                 </div>
             </div>
