--- a/application/views/scripts/formulaire/partials/champ/partial-add-and-list-titles.phtml
+++ b/application/views/scripts/formulaire/partials/champ/partial-add-and-list-titles.phtml
@@ -1,4 +1,4 @@
-<div class="row-fluid titles">
+<div class="row titles">
     <div class="span4">
         <h3><?= $this->titleInfo ?? 'Informations sur le champ' ?></h3>
     </div>
