--- a/application/views/scripts/gestion-prescriptions/showarticlecontenu.phtml
+++ b/application/views/scripts/gestion-prescriptions/showarticlecontenu.phtml
@@ -12,7 +12,7 @@ for($i=0; $i < $nbPrescType; $i++)
 	{
 		echo "
 			<li id='prescriptiontype_".$this->prescriptionType[$i][0]['ID_PRESCRIPTIONTYPE']."'  style='border-bottom:1px solid grey;'>
-				<table  class='row-fluid'>
+				<table  class='row'>
 		";
 
 		$nbAssoc = count($this->prescriptionType[$i]);
