--- a/application/views/scripts/gestion-prescriptions/showprescriptiontexte.phtml
+++ b/application/views/scripts/gestion-prescriptions/showprescriptiontexte.phtml
@@ -43,7 +43,7 @@
 		{
 			echo "
 				<li id='prescriptiontype_".$this->prescriptionType[$i][0]['ID_PRESCRIPTIONTYPE']."'  style='border-bottom:1px solid grey;'>
-					<table  class='row-fluid' >
+					<table  class='row' >
 			";
 
 			$nbAssoc = count($this->prescriptionType[$i]);
