--- a/application/views/scripts/search/etablissement.phtml
+++ b/application/views/scripts/search/etablissement.phtml
@@ -34,7 +34,7 @@
 	</div>
 
     <div id="filterContainer" class="well span12" style="margin-left: 0;">
-        <div class="row-fluid">
+        <div class="row">
             <div>
                 <select name='statuts[]' multiple onchange="masquerBoutonExportCalc()">
                     <?php foreach( $this->DB_statut as $statut ) : ?>
@@ -115,7 +115,7 @@
 
         <div class="span12"></div>
 
-        <div class="row-fluid">
+        <div class="row">
             <select name="preventionniste" class='chosen' data-placeholder='Sélectionnez un préventionniste' onchange="masquerBoutonExportCalc()">
                 <option value=''></option>
                 <?php foreach($this->liste_prev as $prev) : ?>
