--- a/application/views/scripts/formulaire/partials/partial-information-manquante.phtml
+++ b/application/views/scripts/formulaire/partials/partial-information-manquante.phtml
@@ -1,4 +1,4 @@
-<div class='row-fluid'>
+<div class='row'>
     <div class='span6 offset3'>
         <div class="alert text-center"><?= $this->message ?></div>
     </div>
