--- a/application/views/scripts/gestion-prescriptions/saveprescriptiontype.phtml
+++ b/application/views/scripts/gestion-prescriptions/saveprescriptiontype.phtml
@@ -2,7 +2,7 @@
 
 	echo "
 		<li id='prescriptiontype_".$this->idPrescriptionType."'  style='border-bottom:1px solid grey;'>
-			<table class='row-fluid' >
+			<table class='row' >
 	";
 
 	$nbAssoc = count($this->prescriptionType);
