--- a/application/views/scripts/piece-jointe/export.phtml
+++ b/application/views/scripts/piece-jointe/export.phtml
@@ -1,11 +1,11 @@
-<li id="PIECESJOINTES" class="row-fluid" style="margin-bottom: 20px;" tabindex="0">
+<li id="PIECESJOINTES" class="row" style="margin-bottom: 20px;" tabindex="0">
     <div class="span3 pull-left">
         <span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span>
         Liste des pièces jointes pouvant être envoyées vers Plat'AU
     </div>
     <div class="span9">
         <?php foreach ($this->piecesJointes as $pieceJointe): ?>
-            <div class="row-fluid">
+            <div class="row">
                 <div class="span10">
                     <?= $pieceJointe['NOM_PIECEJOINTE'].$pieceJointe['EXTENSION_PIECEJOINTE'] ?>
                 </div>
