--- a/application/views/scripts/users/index.phtml
+++ b/application/views/scripts/users/index.phtml
@@ -1,6 +1,6 @@
 <?php echo $this->partial('users/partials/menu_admin_user.phtml') ?>
 
-<div class='row-fluid'>
+<div class='row'>
 
     <div class="span2 tabbable tabs-left">
         <ul class='nav nav-tabs' style='width: 100%'>
